# hivetui

./: .gitignore  Cargo.toml  README.md  build_targets.sh  hive.bat  hivetui.bat
src/: ai.rs  cli_runner.rs  display.rs  io.rs  io_manager.rs  main.rs  panic_handling.rs  pieces.rs  state.rs  tui_graphics.rs  tui_runner.rs  worker.rs
src/ai/: rate_game_state.rs  rate_moves.rs
src/tui_runner/: ai_worker.rs  animation_and_ai_state.rs  animations.rs  event_mapping.rs  game_setup.rs  setting_renderer.rs  text_input.rs  tui_animations.rs  tui_rendering.rs  tui_settings.rs
src/tui_runner/tui_rendering/: board.rs  tutorial.rs
src/worker/: ai_worker.rs  io_worker.rs
