[package]
name = "hive"
version = "0.1.0"
authors = ["Nikolai Maas <nikolai.maas@student.kit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tgp = { path = "../tgp/tgp" }
tgp-board = { path = "../tgp/tgp-board" }
tgp-ai = { path = "../tgp/tgp-ai" }
text_io = "0.1.8"
either = "1.6"
clap = { version = "4.5.1", features = ["derive"] }
