[package]
name = "hive"
version = "0.1.0"
authors = ["Nikolai Maas <nikolai.maas@student.kit.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tgp = { path = "../tgp/tgp" }
tgp-board = { path = "../tgp/tgp-board" }
tgp-ai = { path = "../tgp/tgp-ai" }
text_io = "0.1.8"
either = "1.6"
clap = { version = "4.5.1", features = ["derive"] }
ratatui = "0.26.1"
crossterm = "0.27.0"
num_enum = "0.7.2"
smallvec = "1.13.2"
directories = "5.0.1"
chrono = { version = "0.4.38" }
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
