[package]
name = "hivetui"
version = "0.1.1"
authors = ["Nikolai Maas <nikolai.maas@student.kit.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
debug = false

[dependencies]
hivetuilib = "0.1"
hivetuilib-board = "0.1"
hivetuilib-ai = "0.1"
text_io = "0.1.8"
either = "1.6"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
num_enum = "0.7"
smallvec = "1.13"
directories = "5.0"
chrono = { version = "0.4" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
